--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,37 +1,34 @@
-# Use Node.js 20 LTS as base image
-FROM node:20-alpine
+# Backend Dockerfile for TexhPulze
+FROM node:18-alpine
+
+# Install curl for health checks
+RUN apk add --no-cache curl
 
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies
-RUN apk add --no-cache \
-    curl \
-    bash
-
 # Copy package files
 COPY backend/package*.json ./
+COPY package.json ./
 
 # Install dependencies
-RUN npm ci --only=production && npm cache clean --force
+RUN npm install
 
-# Copy source code
-COPY backend/src ./src
+# Copy backend source code
+COPY backend/ ./
 
-# Create non-root user
-RUN addgroup -g 1001 -S nodejs && \
-    adduser -S nodejs -u 1001
+# Create data directory for fallback
+RUN mkdir -p data
 
-# Change ownership of the app directory
-RUN chown -R nodejs:nodejs /app
-USER nodejs
+# Copy fallback data
+COPY backend/data/ ./data/
 
 # Expose port
-EXPOSE 5000
+EXPOSE 3000
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:5000/health || exit 1
+  CMD curl -f http://localhost:3000/health || exit 1
 
 # Start the application
-CMD ["node", "src/server.js"]
+CMD ["npm", "start"]
