--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,81 +1,166 @@
 version: '3.8'
 
 services:
+  # MySQL Database
   mysql:
     image: mysql:8.0
-    container_name: tech_news_mysql
+    container_name: texhpulze-mysql
+    restart: unless-stopped
     environment:
-      MYSQL_DATABASE: tech_news
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-password}
-      MYSQL_USER: ${DB_USER:-root}
-      MYSQL_PASSWORD: ${DB_PASSWORD:-password}
+      MYSQL_ROOT_PASSWORD: texhpulze_root_password_2024
+      MYSQL_DATABASE: texhpulze_db
+      MYSQL_USER: texhpulze_user
+      MYSQL_PASSWORD: texhpulze_password_2024
+    ports:
+      - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
       - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql
-    ports:
-      - "${DB_PORT:-3306}:3306"
     networks:
-      - tech_news_network
+      - texhpulze-network
     healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
       retries: 10
-    restart: unless-stopped
 
+  # Redis Cache
+  redis:
+    image: redis:7-alpine
+    container_name: texhpulze-redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    networks:
+      - texhpulze-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      timeout: 3s
+      retries: 5
+
+  # Backend API
   backend:
     build:
-      context: ./backend
-      dockerfile: ../Dockerfile.backend
-    container_name: tech_news_backend
+      context: .
+      dockerfile: Dockerfile.backend
+    container_name: texhpulze-backend
+    restart: unless-stopped
     environment:
-      NODE_ENV: ${NODE_ENV:-production}
-      PORT: ${PORT:-5000}
+      NODE_ENV: production
+      PORT: 3000
       DB_HOST: mysql
       DB_PORT: 3306
-      DB_USER: ${DB_USER:-root}
-      DB_PASSWORD: ${DB_PASSWORD:-password}
-      DB_NAME: tech_news
-      JWT_SECRET: ${JWT_SECRET:-your_super_secret_jwt_key_here}
-      JWT_EXPIRES_IN: ${JWT_EXPIRES_IN:-24h}
-      NEWS_API_KEY: ${NEWS_API_KEY:-your_news_api_key_here}
-      GUARDIAN_API_KEY: ${GUARDIAN_API_KEY:-your_guardian_api_key_here}
-      FRONTEND_URL: ${FRONTEND_URL:-http://localhost:3000}
+      DB_USER: texhpulze_user
+      DB_PASSWORD: texhpulze_password_2024
+      DB_NAME: texhpulze_db
+      JWT_SECRET: texhpulze_jwt_secret_key_2024_production
+      REDIS_URL: redis://redis:6379
+      NEWSAPI_KEY: cec6bb685eb9419fae97970066c63f5e
+      GUARDIAN_API_KEY: b133fd4e-fb25-42bf-a4ec-e9d25888285d
     ports:
-      - "${PORT:-5000}:5000"
+      - "3000:3000"
     depends_on:
       mysql:
         condition: service_healthy
-    networks:
-      - tech_news_network
+      redis:
+        condition: service_healthy
     volumes:
-      - ./backend:/app
-      - /app/node_modules
-    restart: unless-stopped
+      - ./backend/data:/app/data
+      - backend_logs:/app/logs
+    networks:
+      - texhpulze-network
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:5000/health" ]
-      interval: 30s
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
       timeout: 10s
-      retries: 3
+      retries: 5
 
-  nginx:
-    image: nginx:alpine
-    container_name: tech_news_nginx
+  # Frontend
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
+    container_name: texhpulze-frontend
+    restart: unless-stopped
     ports:
       - "80:80"
+    depends_on:
+      backend:
+        condition: service_healthy
+    networks:
+      - texhpulze-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/"]
+      timeout: 10s
+      retries: 5
+
+  # Nginx Reverse Proxy
+  nginx:
+    image: nginx:alpine
+    container_name: texhpulze-nginx
+    restart: unless-stopped
+    ports:
       - "443:443"
+      - "8080:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./ssl:/etc/nginx/ssl
+      - ./nginx/ssl:/etc/nginx/ssl
     depends_on:
+      - frontend
       - backend
     networks:
-      - tech_news_network
+      - texhpulze-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/"]
+      timeout: 10s
+      retries: 5
+
+  # Monitoring - Prometheus
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: texhpulze-prometheus
     restart: unless-stopped
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--storage.tsdb.retention.time=200h'
+      - '--web.enable-lifecycle'
+    networks:
+      - texhpulze-network
+
+  # Monitoring - Grafana
+  grafana:
+    image: grafana/grafana:latest
+    container_name: texhpulze-grafana
+    restart: unless-stopped
+    ports:
+      - "3001:3000"
+    environment:
+      GF_SECURITY_ADMIN_PASSWORD: texhpulze_grafana_2024
+    volumes:
+      - grafana_data:/var/lib/grafana
+    networks:
+      - texhpulze-network
 
 volumes:
   mysql_data:
     driver: local
+  redis_data:
+    driver: local
+  backend_logs:
+    driver: local
+  prometheus_data:
+    driver: local
+  grafana_data:
+    driver: local
 
 networks:
-  tech_news_network:
+  texhpulze-network:
     driver: bridge
