--- a/package.json
+++ b/package.json
@@ -1,30 +1,17 @@
 {
-  "name": "my-netfolio",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "texhpulze-simple",
+  "version": "1.0.0",
+  "description": "Simple TexhPulze server for testing",
+  "main": "simple-server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "node simple-server.js",
+    "dev": "node simple-server.js"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "express": "^4.18.0",
+    "cors": "^2.8.5"
   },
-  "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.3",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.4.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13",
-    "vite": "^7.1.7"
-  }
+  "keywords": ["tech", "news", "api"],
+  "author": "",
+  "license": "ISC"
 }
