feat(strategy): Implement strategic changes - social sharing, B2B APIs, expert network, enhanced company profiles, newsletter system
- Add shareable scorecard components with social media integration
- Remove audio briefs and impact calculator to reduce costs
- Simplify ELI5 toggle to clear writing by default
- Remove company claims system for MVP focus
- Add email newsletter system for low-friction acquisition
- Build B2B intelligence API for vendor risk assessment
- Create expert verification network with weighted voting
- Enhance company profiles with premium features and revenue focus
- Add web-first approach with professional landing pages
- Implement analytics tracking and event management
- Update mobile app configuration for local development

--- a/TexhPulzeMobile/package.json
+++ b/TexhPulzeMobile/package.json
@@ -6,6 +6,8 @@
     "start": "expo start",
     "start:dev": "expo start --dev-client",
     "start:tunnel": "expo start --tunnel",
+    "start:lan": "expo start --lan --port 8095",
+    "setup:local": "node scripts/setup-local-dev.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
