--- a/env.example
+++ b/env.example
@@ -13,7 +13,15 @@ REDIS_PASSWORD=redis_dev_password
 JWT_SECRET=dev-jwt-secret-key-change-in-production
 OPENAI_API_KEY=your-openai-api-key-here
 FRONTEND_URL=http://localhost:3000
-API_BASE_URL=http://localhost:5000
+API_BASE_URL=http://localhost:8090
+
+# Backend-specific environment variables
+# Copy these to backend/.env for local development
+DATABASE_URL=postgresql://user:password@hostname:5432/texhpulze
+TEXHPULZE_JWT_SECRET=supersecuresecret
+NODE_ENV=development
+PORT=8090
+REDIS_URL=redis://localhost:6379
 
 # Production (for docker-compose.prod.yml)
 # Uncomment and set these for production deployment
