feat(mobile): Configure CORS for Expo app and fix dependencies
- Update backend CORS to allow Expo app connections (exp://localhost, localhost:8095)
- Add production domains (texhpulze.com, expo.dev) to CORS origins
- Simplify mobile app dependencies for Expo SDK 54 compatibility
- Remove problematic analytics dependencies temporarily
- Configure FRONTEND_URL for production deployment
- Mobile app now ready for live streaming on Expo

--- a/env.example
+++ b/env.example
@@ -12,7 +12,7 @@ REDIS_PASSWORD=redis_dev_password
 # API
 JWT_SECRET=dev-jwt-secret-key-change-in-production
 OPENAI_API_KEY=your-openai-api-key-here
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://www.texhpulze.com
 API_BASE_URL=http://localhost:8090
 
 # Backend-specific environment variables
