--- a/TexhPulzeMobile/package.json
+++ b/TexhPulzeMobile/package.json
@@ -26,56 +26,37 @@
     "lint": "echo 'Linting not configured' && exit 0"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-picker/picker": "^2.11.2",
-    "@react-navigation/native": "^7.1.18",
-    "@react-navigation/stack": "^7.4.10",
-    "@tanstack/react-query": "^5.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/native": "6.1.18",
+    "@react-navigation/stack": "6.4.1",
     "axios": "^1.12.2",
-    "expo": "^54.0.13",
-    "expo-constants": "~16.0.0",
+    "expo": "~54.0.0",
+    "expo-constants": "~17.0.3",
     "expo-secure-store": "~14.0.0",
-    "expo-status-bar": "~3.0.8",
-    "lru-cache": "^10.0.0",
-    "react": "19.1.0",
-    "react-native": "0.81.4",
-    "react-native-gesture-handler": "^2.28.0",
-    "react-native-reanimated": "^4.1.3",
-    "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.16.0",
-    "react-native-toast-message": "^2.3.3",
-    "expo-speech": "~11.9.0",
-    "@segment/analytics-react-native": "^1.0.0",
-    "@react-native-firebase/analytics": "^20.0.0",
-    "react-native-mixpanel": "^1.3.0"
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.3",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "3.37.0",
+    "react-native-toast-message": "2.3.3"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
-    "@types/lru-cache": "^10.0.0",
-    "typescript": "~5.9.2",
-    "@testing-library/react-native": "^12.0.0",
-    "@testing-library/jest-native": "^5.4.0",
-    "jest": "^29.5.0",
-    "jest-expo": "^52.0.0",
-    "react-test-renderer": "19.1.0"
+    "@types/react": "~18.3.12",
+    "typescript": "~5.9.2"
   },
   "jest": {
     "preset": "jest-expo",
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
     ],
-    "setupFilesAfterEnv": ["<rootDir>/jest.setup.js"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ],
     "testMatch": [
       "**/__tests__/**/*.test.(js|jsx|ts|tsx)"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts",
-      "!src/**/*.stories.{js,jsx,ts,tsx}"
-    ],
-    "moduleNameMapping": {
-      "^@/(.*)$": "<rootDir>/src/$1"
-    }
+    ]
   },
   "private": true
 }
