--- a/TexhPulzeMobile/package.json
+++ b/TexhPulzeMobile/package.json
@@ -1,7 +1,7 @@
 {
   "name": "texhpulzemobile",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "start:dev": "expo start --dev-client",
@@ -11,6 +11,9 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
+    "build:web": "npx expo export --platform web",
+    "deploy:web": "npm run build:web && npx vercel --prod --token=$env:VERCEL_TOKEN",
+    "web:serve": "npx serve dist/web-build",
     "build:android": "eas build --platform android",
     "build:ios": "eas build --platform ios",
     "build:all": "eas build --platform all",
@@ -26,24 +29,28 @@
     "lint": "echo 'Linting not configured' && exit 0"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/native": "6.1.18",
-    "@react-navigation/stack": "6.4.1",
+    "@react-native-async-storage/async-storage": "~2.2.0",
+    "@react-navigation/native": "~6.1.18",
+    "@react-navigation/stack": "~6.4.1",
     "axios": "^1.12.2",
-    "expo": "~54.0.0",
-    "expo-constants": "~17.0.3",
-    "expo-secure-store": "~14.0.0",
-    "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.3",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "3.37.0",
-    "react-native-toast-message": "2.3.3"
+    "expo": "~54.0.13",
+    "expo-constants": "~18.0.9",
+    "expo-secure-store": "~15.0.7",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-toast-message": "^2.3.3",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
-    "@types/react": "~18.3.12",
+    "@expo/webpack-config": "^18.1.4",
+    "@types/react": "~19.1.10",
     "typescript": "~5.9.2"
   },
   "jest": {
