Revamp Texhpulze 2.0 - frontend fixes and structure updates

--- a/env.example
+++ b/env.example
@@ -1,34 +1,16 @@
-# TexhPulze Development Environment Variables
-# Copy this file to .env and update with your actual values
+# Next.js Environment Variables
+NEXT_PUBLIC_API_URL=http://localhost:8000
 
-# Database
-POSTGRES_DB=texhpulze_dev
-POSTGRES_USER=texhpulze
-POSTGRES_PASSWORD=texhpulze_dev_password
+# FastAPI Backend Configuration
+API_HOST=0.0.0.0
+API_PORT=8000
+API_RELOAD=true
 
-# Redis
-REDIS_PASSWORD=redis_dev_password
+# Database Configuration (if needed in future)
+DATABASE_URL=sqlite:///./techpulse.db
 
-# API
-JWT_SECRET=dev-jwt-secret-key-change-in-production
-OPENAI_API_KEY=your-openai-api-key-here
-FRONTEND_URL=https://www.texhpulze.com
-API_BASE_URL=http://localhost:8090
+# Security
+SECRET_KEY=your-secret-key-here
 
-# Backend-specific environment variables
-# Copy these to backend/.env for local development
-DATABASE_URL=postgresql://user:password@hostname:5432/texhpulze
-TEXHPULZE_JWT_SECRET=supersecuresecret
-NODE_ENV=development
-PORT=8090
-REDIS_URL=redis://localhost:6379
-
-# Production (for docker-compose.prod.yml)
-# Uncomment and set these for production deployment
-# POSTGRES_DB=texhpulze_prod
-# POSTGRES_PASSWORD=your-secure-password
-# REDIS_PASSWORD=your-secure-redis-password
-# JWT_SECRET=your-super-secure-jwt-secret
-# OPENAI_API_KEY=your-openai-api-key
-# FRONTEND_URL=https://yourdomain.com
-# API_BASE_URL=https://api.yourdomain.com
+# Logging
+LOG_LEVEL=INFO
